@@ -1,6 +1,15 @@
 \name{NEWS}
 \title{dbarts News}
 \encoding{UTF-8}
+\section{CHANGES IN VERSION 0.9-29}{
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item `dbarts` now works to initialize a sampler for binary outcomes when
+            `resid.prior` is left at its default. Bug report thanks to github
+            user LennMass.
+    }
+  }
+}
 \section{CHANGES IN VERSION 0.9-27}{
   \subsection{BUG FIXES}{
     \itemize{
